2001-07-07  Drazen Kacar  <dave@arsdigita.com>

	* configure.in: Check whether the C compiler supports inline.

	* audio_solaris.c: Recognize SUNW,audiots as supported device.
	Make explicit checks for all devices we know we don't support.
	If we encounter unknown device, print out the warning, but
	attempt to use it. Added EINTR wrappers all around the place.
	Added checks for more esd devices (ports in Solaris terminology).
	Added flush function.

2001-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Added esd-config.in to EXTRA_DIST.
	
2001-03-26  Darin Adler  <darin@eazel.com>

	* docs/.cvsignore: Ignore Makefile.

2001-03-11  Timur Bakeyev <mc@bat.ru>

	* Makefile.am: Changed the order of libraries in LDADD. Some old
	linkers really depend from it...
	
2001-01-23  Gregory Leblanc  <gleblanc@cu-portland.edu>

	* docs/esound.sgml: updated/tested for use with nautilus

2000-11-29  Stanislav Brabec  <utx@penguin.cz>

	* esd.m4: New check AM_ESD_SUPPORTS_MULTIPLE_RECORD.
	* NEWS: Updated.

2000-11-28  Stanislav Brabec  <utx@penguin.cz>

        * esd.c, configure.in: Security improvements: All unsafe
	operations while creating ESD_UNIX_SOCKET_DIR was removed, new
	function safe_mksocketdir(), new variable esd_trustval and new
	argument -trust. Use +t on ESD_UNIX_SOCKET_DIR. There still
	remains trivial local DoS attack - I don't see better possible
	solution than suid helper.

	* configure.in: Added check for fchown and fchmod.

2000-11-28  Stanislav Brabec  <utx@penguin.cz>

	* esd.c: Use rmdir on directories instead of unlink,
	support for --help and help for -nobeeps.
	* esdlib.c: Typo fixes.
	* esdfile.c: Open files via "rb" on all systems. It is standard C,
	does no harm on systems where it isn't needed (Unix).

2000-10-30  Heikki Hannikainen <hessu@hes.iki.fi>

	* clients.c, esd-server.h, esd.c, players.c, proto.ci: Added
	support for multiple recording clients. Pretty straightforward
	cloning of player clients handling code.
	* 0.2.21
